[package]
name = "revm-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
revm = { path = "../revm/crates/revm"}
revme = { path = "../revm/bins/revme"}
revm-test = { path = "../revm/bins/revm-test"}
revm-primitives = { path = "../revm/crates/primitives"}
revm-interpreter = { path = "../revm/crates/interpreter"}
revm-precompile = { path = "../revm/crates/precompile"}

[dependencies]
ethers = { version = "2.0.14", features = ["abigen", "ws"] }

revm = { version = "9.0.0", features = [
    "serde",
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }

tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.37"
sha3 = "0.10.8"
ethabi = "18.0.0"
anyhow = "1.0.75"
futures = "0.3.5"
eyre = "0.6.8"
bigdecimal = "0.4.1"
hashbrown = "0.14.0"
lazy_static = "1.4.0"
serde_json = "1.0.107"


[[bin]]
name = "simulate-call"
path = "src/examples/simulate_call.rs"

[[bin]]
name = "simulate-swap"
path = "src/examples/simulate_swap.rs"

[[bin]]
name = "simple-trace"
path = "src/examples/simple_trace.rs"

[[bin]]
name = "toy-precompile"
path = "src/examples/toy-precompile.rs"